updated project path

--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -6,7 +6,7 @@ on:
     
 env:
   NET_VERSION: 7.0.101
-  PROJECT_PATH: 'Scr/IeuanWalker.Maui.Switch.csproj'
+  PROJECT_PATH: 'Scr/Switch/IeuanWalker.Maui.Switch.csproj'
   NUGET_PATH: './**/IeuanWalker.Maui.Switch.${{ github.event.release.tag_name }}.nupkg'
 
 jobs:
