--- a/Scr/Switch/IeuanWalker.Maui.Switch.csproj
+++ b/Scr/Switch/IeuanWalker.Maui.Switch.csproj
@@ -53,5 +53,16 @@
     </MauiXaml>
   </ItemGroup>
 
-  <Import Project="MultiTargeting.targets" />
+  <ItemGroup Condition="$(TargetFramework.StartsWith('net7.0-ios')) != true">
+    <Compile Remove="**\**\*.ios.cs" />
+    <None Include="**\**\*.ios.cs" Exclude="$(DefaultItemExcludes);$(DefaultExcludesInProjectFolder)" />
+  </ItemGroup>
+  <ItemGroup Condition="$(TargetFramework.StartsWith('MonoAndroid')) != true AND $(TargetFramework.StartsWith('net7.0-android')) != true">
+    <Compile Remove="**\**\*.android.cs" />
+    <None Include="**\**\*.android.cs" Exclude="$(DefaultItemExcludes);$(DefaultExcludesInProjectFolder)" />
+  </ItemGroup>
+  <ItemGroup Condition="!($(TargetFramework.StartsWith('net')) == true AND $(TargetFramework.EndsWith('.0')) == true AND $(TargetFramework.Contains('-')) != true)">
+    <Compile Remove="**\**\*.net.cs" />
+    <None Include="**\**\*.net.cs" Exclude="$(DefaultItemExcludes);$(DefaultExcludesInProjectFolder)" />
+  </ItemGroup>
 </Project>
