--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -36,7 +36,7 @@ jobs:
         path: ${{ env.NUGET_PATH }}
 
     - name: Setup NuGet
-      uses: NuGet/setup-nuget@latest
+      uses: NuGet/setup-nuget@1.1.1
       
     - name: Publish
       run: nuget push **\*.nupkg -Source 'https://api.nuget.org/v3/index.json' -ApiKey ${{secrets.NUGET_API_KEY}}
