Added pangesture test page

--- a/Demo/App/App.csproj
+++ b/Demo/App/App.csproj
@@ -121,6 +121,9 @@
 	  <MauiXaml Update="Pages\CustomSwitchPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\PanGestureTestPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\SwitchViewPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
