--- a/Demo/App/App.csproj
+++ b/Demo/App/App.csproj
@@ -33,6 +33,7 @@
 	<PropertyGroup Condition="'$(TargetFramework)'=='net7.0-ios'">
 	  <CodesignKey>Apple Development: Ieuan Walker (R4SVVV33HW)</CodesignKey>
 	  <CodesignProvision>VS: WildCard Development</CodesignProvision>
+	  <ProvisioningType>manual</ProvisioningType>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -73,9 +74,8 @@
 	  <Compile Update="Controls\BackButton.xaml.cs">
 	    <DependentUpon>BackButton.xaml</DependentUpon>
 	  </Compile>
-	  <Compile Update="Controls\CustomSwitchExamples\DisableSupportedSwitch.xaml.cs">
-	    <DependentUpon>DisableSupportedSwitch.xaml</DependentUpon>
-	    <SubType>Code</SubType>
+	  <Compile Update="Pages\IsEnabledTestPage.xaml.cs">
+	    <DependentUpon>IsEnabledTestPage.xaml</DependentUpon>
 	  </Compile>
 	</ItemGroup>
 
@@ -119,6 +119,9 @@
 	  <MauiXaml Update="Controls\SwitchViewExamples\ImageSwitch.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\IsEnabledTestPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\AccessiblityTestPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
@@ -129,10 +132,6 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Pages\SwitchViewPage.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="Controls\CustomSwitchExamples\DisableSupportedSwitch.xaml">
-	    <SubType>Designer</SubType>
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
