Added IsBusy functionality to CustomSwitch control
Two new files, `IsBusyTestPage.xaml.cs` and `IsBusyTestPage.xaml`, have been added to `App.csproj`. The `CustomSwitch` control in `IosSwitch.xaml` and `CustomSwitch.xaml` now has a new `IsBusy` property, indicating whether the switch is busy, and an `IsBusyContent` property, which displays an `ActivityIndicator` when the switch is busy. A new button has been added to `MainPage.xaml` that navigates to the `IsBusyTestPage`. The `IsBusyTestPage.xaml` contains two `IosSwitch` controls bound to the `IsToggled` property of a `DynamicToggle` switch.

--- a/Demo/App/App.csproj
+++ b/Demo/App/App.csproj
@@ -74,6 +74,9 @@
 	  <Compile Update="Controls\BackButton.xaml.cs">
 	    <DependentUpon>BackButton.xaml</DependentUpon>
 	  </Compile>
+	  <Compile Update="Pages\IsBusyTestPage.xaml.cs">
+	    <DependentUpon>IsBusyTestPage.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="Pages\IsEnabledTestPage.xaml.cs">
 	    <DependentUpon>IsEnabledTestPage.xaml</DependentUpon>
 	  </Compile>
@@ -117,6 +120,9 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Controls\SwitchViewExamples\ImageSwitch.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\IsBusyTestPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Pages\IsEnabledTestPage.xaml">
