--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -23,6 +23,12 @@ jobs:
         
     - name: Install .NET MAUI ${{ env.NET_VERSION }}
       run: dotnet workload install maui --ignore-failed-sources
+
+    - name: Setup Java JDK
+      uses: actions/setup-java@v3.13.0
+      with:
+        distribution: 'microsoft'
+        java-version: '11'
         
     - name: Restore dependencies
       run: dotnet restore ${{ env.PROJECT_PATH }}
