--- a/Demo/App/App.csproj
+++ b/Demo/App/App.csproj
@@ -36,10 +36,11 @@
     <None Remove="Resources\Raw\lottieSwitch1.json" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Maui" Version="5.0.0" />
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
-    <PackageReference Include="IeuanWalker.Maui.StateButton" Version="1.1.1" />
-    <PackageReference Include="SkiaSharp.Extended.UI.Maui" Version="2.0.0-preview.61" />
+    <PackageReference Include="CommunityToolkit.Maui" Version="9.1.1" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
+    <PackageReference Include="IeuanWalker.Maui.StateButton" Version="1.2.0" />
+    <PackageReference Include="SkiaSharp.Extended.UI.Maui" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Maui.Controls" Version="9.0.10" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Scr\Switch\IeuanWalker.Maui.Switch.csproj" />
