--- a/Scr/Switch/IeuanWalker.Maui.Switch.csproj
+++ b/Scr/Switch/IeuanWalker.Maui.Switch.csproj
@@ -58,4 +58,8 @@
     <Compile Remove="**\**\*.net.cs" />
     <None Include="**\**\*.net.cs" Exclude="$(DefaultItemExcludes);$(DefaultExcludesInProjectFolder)" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Maui.Controls" Version="9.0.10" />
+  </ItemGroup>
 </Project>
