--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -5,7 +5,7 @@ on:
     types: [published]
     
 env:
-  NET_VERSION: 7.0.101
+  NET_VERSION: 9.*.*
   PROJECT_PATH: 'Scr/Switch/IeuanWalker.Maui.Switch.csproj'
   NUGET_PATH: './**/IeuanWalker.Maui.Switch.${{ github.event.release.tag_name }}.nupkg'
 
