--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
     - cron:  '0 0 1 */3 *'    # Every 3 months 
     
 env:
-  NET_VERSION: 7.0.101
+  NET_VERSION: 9.*.*
   PROJECT_PATH: 'Scr/Switch/IeuanWalker.Maui.Switch.csproj'
   NUGET_PATH: './**/IeuanWalker.Maui.Switch.1.0.0.nupkg'
 
