--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -5,7 +5,7 @@ on:
     types: [published]
     
 env:
-  NET_VERSION: 10.*.*
+  NET_VERSION: 10.0.100
   PROJECT_PATH: 'Scr/Switch/IeuanWalker.Maui.Switch.csproj'
   NUGET_PATH: './**/IeuanWalker.Maui.Switch.${{ github.event.release.tag_name }}.nupkg'
 
@@ -15,6 +15,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+  
+    - name: Display dotnet info
+      run: dotnet --info
     
     - name: Setup .NET ${{ env.NET_VERSION }}
       uses: actions/setup-dotnet@v2
@@ -23,6 +26,9 @@ jobs:
         
     - name: Install .NET MAUI ${{ env.NET_VERSION }}
       run: dotnet workload install maui --ignore-failed-sources
+
+    - name: Display dotnet info
+      run: dotnet --info
 
     - name: Setup Java JDK
       uses: actions/setup-java@v3.13.0
