--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
     - cron:  '0 0 1 */3 *'    # Every 3 months 
     
 env:
-  NET_VERSION: 10.*.*
+  NET_VERSION: 10.0.100
   PROJECT_PATH: 'Scr/Switch/IeuanWalker.Maui.Switch.csproj'
   NUGET_PATH: './**/IeuanWalker.Maui.Switch.1.0.0.nupkg'
 
@@ -19,6 +19,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+  
+    - name: Display dotnet info
+      run: dotnet --info
     
     - name: Setup .NET ${{ env.NET_VERSION }}
       uses: actions/setup-dotnet@v2
@@ -27,6 +30,9 @@ jobs:
         
     - name: Install .NET MAUI ${{ env.NET_VERSION }}
       run: dotnet workload install maui --ignore-failed-sources
+
+    - name: Display dotnet info
+      run: dotnet --info
 
     - name: Setup Java JDK
       uses: actions/setup-java@v3.13.0
